Fix iOS scroll issues with overlapping keyboard and address bar (#94)

--- a/src/components/DirectionsNullState.css
+++ b/src/components/DirectionsNullState.css
@@ -1,5 +1,6 @@
 .DirectionsNullState {
-  padding: 24px;
+  /* extra padding on bottom to work around mobile Safari expanding address bar */
+  padding: 24px 24px 82px 24px;
 }
 
 .DirectionsNullState_header {
